src/objects/Controlled_Document__c.object
<CustomObject>
    <fields>
        <fullName>A_suite_reviewed_External__c</fullName>
        <formula>IF(( GSA_AR_Signature_Approval_of_the_Admin__c =1  &amp;&amp;  Total_External1__c =1), 1, 0)</formula>
        <label>A-suite reviewed (External)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>A_suite_reviewed_Internal__c</fullName>
        <formula>IF(( GSA_AR_Signature_Approval_of_the_Admin__c =1  &amp;&amp;  Total_Internal1__c =1), 1, 0)</formula>
        <label>A-suite reviewed (Internal)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Allow_ExecSec_Access__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When selected, this field grants ExecSec users access to this Controlled Document record.</inlineHelpText>
        <label>Allow ExecSec Access</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Assignee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This is the ExecSec user assigned to the record.</inlineHelpText>
        <label>ExecSec Assignee</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Controlled_Documents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Associated_Record_Number_s__c</fullName>
        <inlineHelpText>This field is used to capture any Document IDs that are related to this record.</inlineHelpText>
        <label>Associated Record Number(s)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Asuite_Review_Days__c</fullName>
        <label>Asuite Review Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Average_Days_in_Prcs_Businessline_sign__c</fullName>
        <formula>IF(( Number_of_Businessline_signed_controls__c = 1 || Number_of_Businessline_signed_controls1__c = 1),  Days_Open__c , 0)</formula>
        <label>Average Days in Prcs (Businessline sign)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Avg_Business_Days_in_Process1__c</fullName>
        <formula>IF( Exception__c = FALSE, Days_Open__c , 0)</formula>
        <label>Avg Business Days in Process</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Avg_Business_Days_in_Process_total__c</fullName>
        <formula>IF( Exception__c = FALSE,  Days_Open__c , 0)</formula>
        <label>Avg Business Days in Process (total)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Avg_Days_in_Proc_A_Suite_Congressionals__c</fullName>
        <formula>IF( GSA_AR_Signature_Approval_of_the_Admin__c = 1,  Days_Open__c , 0)</formula>
        <label>Avg Days in Proc A-Suite Congressionals</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Avg_Days_in_process_External__c</fullName>
        <formula>IF(( ISPICKVAL(  Internal_External__c  , &apos;External&apos;)),  Days_Open__c , 0)</formula>
        <label>Avg Days in process (External)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Avg_Days_in_process_Internal__c</fullName>
        <formula>IF(( ISPICKVAL(  Internal_External__c  , &apos;Internal&apos;)),  Days_Open__c , 0)</formula>
        <label>Avg Days in process (Internal)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Avg_Days_to_Rvw_A_Suite_Congressionals__c</fullName>
        <formula>IF(( GSA_AR_Signature_Approval_of_the_Admin__c = 1),  Asuite_Review_Days__c , 0)</formula>
        <label>Avg Days to Rvw A-Suite Congressionals</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Avg_Number_of_days_for_A_suite__c</fullName>
        <formula>IF(( ISPICKVAL( GSA_Action_Required__c , &quot;Signature/Approval of the Administrator&quot;)) ,  Asuite_Review_Days__c , 0)</formula>
        <label>Avg Number of days for A-suite</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Avg_days_Open_for_A_suite_Controls__c</fullName>
        <formula>IF(( ISPICKVAL( GSA_Action_Required__c , &quot;Signature/Approval of the Administrator&quot;)) ,  Days_Open__c , 0)</formula>
        <label>Avg days Open for A-suite Controls</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cleared_in_20_or_Fewer_Days_OCIA_Exter__c</fullName>
        <formula>IF(( Percent_Cleared_in_20_or_Fewer_Days__c = 1 &amp;&amp;  Total_External1__c  = 1), 1, 0)</formula>
        <label>Cleared in 20 or Fewer Days (OCIA) Exter</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cleared_in_20_or_Fewer_Days_OCIA_INTER__c</fullName>
        <formula>IF(( Percent_Cleared_in_20_or_Fewer_Days__c = 1  &amp;&amp;  Total_Internal1__c = 1), 1, 0)</formula>
        <label>Cleared in 20 or Fewer Days (OCIA) INTER</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cleared_in_21_to_25_Days_AA_OCIA__c</fullName>
        <formula>IF((( Days_Open__c &gt; 20  &amp;&amp;  Days_Open__c &lt; 26)  &amp;&amp;  OCIA_Signed__c =1), 1, 0)</formula>
        <label>Cleared in 21 to 25 Days (AA OCIA)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cleared_in_21_to_25_Days_OCIA_External__c</fullName>
        <formula>IF( (Cleared_in_21_to_25_Days_AA_OCIA__c = 1 &amp;&amp;  Total_External1__c  = 1), 1, 0)</formula>
        <label>Cleared in 21 to 25 Days (OCIA) External</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cleared_in_21_to_25_Days_OCIA_INTERNAL__c</fullName>
        <formula>IF( (Cleared_in_21_to_25_Days_AA_OCIA__c = 1  &amp;&amp;  Total_Internal1__c = 1), 1, 0)</formula>
        <label>Cleared in 21 to 25 Days (OCIA) INTERNAL</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cleared_in_over_25_Days_AA_OCIA__c</fullName>
        <formula>IF(( Number_Cleared_in_over_25_Days__c = 1  &amp;&amp;  ( OCIA_Signed__c = 1))  , 1, 0)</formula>
        <label>Cleared in over 25 Days (AA OCIA)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Congressional_True__c</fullName>
        <description>Number of Congressionals</description>
        <formula>IF( Congressional__c = TRUE, &apos;Number of Congressionals&apos;, &apos;0&apos;)</formula>
        <label>Congressional = True</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Congressional__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If checked, this field indicates that the Controlled Document is related to a Congressional request, correspondence, or issue.</inlineHelpText>
        <label>Congressional</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contract_Award_Date__c</fullName>
        <inlineHelpText>Date Contract has been/will be awarded</inlineHelpText>
        <label>Contract Award Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Category__c</fullName>
        <inlineHelpText>Select one or both contract category</inlineHelpText>
        <label>Contract Category</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Commodity</fullName>
                </value>
                <value>
                    <fullName>Service</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contract_Date__c</fullName>
        <inlineHelpText>Contract Received Date</inlineHelpText>
        <label>Contract Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Correspondence_Type__c</fullName>
        <inlineHelpText>The type of document represented by the primary file(s) being approved through this record.</inlineHelpText>
        <label>Document Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Acquisition Plan</fullName>
                </value>
                <value>
                    <fullName>AFR</fullName>
                </value>
                <value>
                    <fullName>Annual Report</fullName>
                </value>
                <value>
                    <fullName>Appeal</fullName>
                </value>
                <value>
                    <fullName>ASF: Cost &amp; Capital Plan</fullName>
                </value>
                <value>
                    <fullName>Budget</fullName>
                </value>
                <value>
                    <fullName>Claim</fullName>
                </value>
                <value>
                    <fullName>Complaint</fullName>
                </value>
                <value>
                    <fullName>Dashboard</fullName>
                </value>
                <value>
                    <fullName>Delegation</fullName>
                </value>
                <value>
                    <fullName>Directive</fullName>
                </value>
                <value>
                    <fullName>E-Gov Reporting</fullName>
                </value>
                <value>
                    <fullName>FISMA</fullName>
                </value>
                <value>
                    <fullName>Forms</fullName>
                </value>
                <value>
                    <fullName>GAO Draft Response</fullName>
                </value>
                <value>
                    <fullName>GAO Final Response</fullName>
                </value>
                <value>
                    <fullName>Hazardous Waste Report</fullName>
                </value>
                <value>
                    <fullName>Home-To-Work</fullName>
                </value>
                <value>
                    <fullName>IG Audit</fullName>
                </value>
                <value>
                    <fullName>IG Draft Response</fullName>
                </value>
                <value>
                    <fullName>IG Final Response</fullName>
                </value>
                <value>
                    <fullName>Instructional Letter</fullName>
                </value>
                <value>
                    <fullName>Interagency Agreement</fullName>
                </value>
                <value>
                    <fullName>Inventory</fullName>
                </value>
                <value>
                    <fullName>Lease Prospectus</fullName>
                </value>
                <value>
                    <fullName>Letter</fullName>
                </value>
                <value>
                    <fullName>Memorandum</fullName>
                </value>
                <value>
                    <fullName>MOU</fullName>
                </value>
                <value>
                    <fullName>Occupational Safety &amp; Health</fullName>
                </value>
                <value>
                    <fullName>OMB Scorecard</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Current_Division_Code__c</fullName>
        <label>Current Division Code</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Division_Name__c</fullName>
        <description>Automated Location field updates</description>
        <label>Current Division Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Location_Start_Date_New__c</fullName>
        <label>Current Location Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Current_Location__c</fullName>
        <description>User selects what office/region/sub-office currently has the document</description>
        <label>Old Current Location</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A - Office of the Administrator</fullName>
                </value>
                <value>
                    <fullName>B - Office of the Chief Financial Officer</fullName>
                </value>
                <value>
                    <fullName>C - Office of Human Resource Management</fullName>
                </value>
                <value>
                    <fullName>D - Office of Mission Assurance</fullName>
                </value>
                <value>
                    <fullName>E - Office of Small Business Utilization</fullName>
                </value>
                <value>
                    <fullName>G - Civilian Board of Contract Appeals</fullName>
                </value>
                <value>
                    <fullName>H - Office of Administrative Services</fullName>
                </value>
                <value>
                    <fullName>I - Office of the GSA IT</fullName>
                </value>
                <value>
                    <fullName>J - Office of the Inspector General</fullName>
                </value>
                <value>
                    <fullName>L - Office of the General Counsel</fullName>
                </value>
                <value>
                    <fullName>M - Office of Governmentwide Policy</fullName>
                </value>
                <value>
                    <fullName>O - Office of Customer Experience</fullName>
                </value>
                <value>
                    <fullName>P - Public Buildings Service</fullName>
                </value>
                <value>
                    <fullName>Q - Federal Acquisition Service</fullName>
                </value>
                <value>
                    <fullName>S - Office of Congressional and Intergovernmental Affairs</fullName>
                </value>
                <value>
                    <fullName>T - Technology Transformation Service</fullName>
                </value>
                <value>
                    <fullName>Y - Federal Permitting Improvement Steering Council</fullName>
                </value>
                <value>
                    <fullName>Z - Office of Strategic Communication</fullName>
                </value>
                <value>
                    <fullName>Region 1A</fullName>
                </value>
                <value>
                    <fullName>Region 1P</fullName>
                </value>
                <value>
                    <fullName>Region 1Q</fullName>
                </value>
                <value>
                    <fullName>Region 2A</fullName>
                </value>
                <value>
                    <fullName>Region 2P</fullName>
                </value>
                <value>
                    <fullName>Region 2Q</fullName>
                </value>
                <value>
                    <fullName>Region 3A</fullName>
                </value>
                <value>
                    <fullName>Region 3P</fullName>
                </value>
                <value>
                    <fullName>Region 3Q</fullName>
                </value>
                <value>
                    <fullName>Region 4A</fullName>
                </value>
                <value>
                    <fullName>Region 4P</fullName>
                </value>
                <value>
                    <fullName>Region 4Q</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Current_Location_auto__c</fullName>
        <description>Automated Location field updates</description>
        <inlineHelpText>This field shows the office that is taking action on the record.</inlineHelpText>
        <label>Current Location</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Organization_Acronym__c</fullName>
        <description>Automated Location field updates</description>
        <label>Current Organization Acronym</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Region__c</fullName>
        <label>Current Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Central Office</fullName>
                </value>
                <value>
                    <fullName>Region 1</fullName>
                </value>
                <value>
                    <fullName>Region 2</fullName>
                </value>
                <value>
                    <fullName>Region 3</fullName>
                </value>
                <value>
                    <fullName>Region 4</fullName>
                </value>
                <value>
                    <fullName>Region 5</fullName>
                </value>
                <value>
                    <fullName>Region 6</fullName>
                </value>
                <value>
                    <fullName>Region 7</fullName>
                </value>
                <value>
                    <fullName>Region 8</fullName>
                </value>
                <value>
                    <fullName>Region 9</fullName>
                </value>
                <value>
                    <fullName>Region 10</fullName>
                </value>
                <value>
                    <fullName>National Capital Region</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Current_Region_auto__c</fullName>
        <description>Automated Location field updates</description>
        <label>Current Region</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Stage_Start_Date_New__c</fullName>
        <label>Current Stage Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Current_Year__c</fullName>
        <formula>IF(
( 
( (YEAR( ExecSec_End_Date__c) = 2018)  &amp;&amp;  MONTH( ExecSec_End_Date__c )&lt; 10 )  || 
( (YEAR( ExecSec_End_Date__c) = 2017)  &amp;&amp;  MONTH( ExecSec_End_Date__c )&gt;= 10 )
), &quot;Current Fiscal Year&quot; , &quot;Previous Fiscal Year&quot;)</formula>
        <label>Current Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cut_Off_Date_Year_End2__c</fullName>
        <formula>IF(  MONTH(Cut_Off_Date__c) &lt; 10, DATE (YEAR( Cut_Off_Date__c ), 09, 30), DATE ((YEAR( Cut_Off_Date__c )+1), 09, 30))</formula>
        <inlineHelpText>The last day of the fiscal year in which the Cut-Off Date occurs.</inlineHelpText>
        <label>Cut-Off Date Year End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Cut_Off_Date__c</fullName>
        <inlineHelpText>The date the record is considered completed, closed or superfluous for record retention purposes.</inlineHelpText>
        <label>Cut-Off Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Closed__c</fullName>
        <inlineHelpText>The date the record is closed. This field cannot be completed until the Stage is set to Closed. When the Stage is set to Closed, this field is automatically populated with the current date. However, this date can be edited.</inlineHelpText>
        <label>Date Closed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Received__c</fullName>
        <inlineHelpText>The date correspondence received or control started.</inlineHelpText>
        <label>Date Received/Started</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Incoming__c</fullName>
        <inlineHelpText>The date indicated on the incoming piece of correspondence, if applicable.</inlineHelpText>
        <label>Date of Incoming</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Days_In_Current_Location_New__c</fullName>
        <label>Days In Current Location</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_On_Current_Stage_New__c</fullName>
        <label>Days On Current Stage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Open__c</fullName>
        <inlineHelpText>A calculation of the number of days a record has been open. This field is the difference between the ExecSec Start Date and either the current date, or the ExecSec End Date if that field is populated.</inlineHelpText>
        <label>ExecSec Business Days Open</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Overdue__c</fullName>
        <description>A calculation of the number of days a record has been open beyond the Due Date. This field is calculated as the number of business days that have passed since the Due Date before the record was marked as closed (i.e., Stage = Closed). If today&apos;s date is still before the Due Date, the field should either be blank or show a 0. Once the record has been closed and has a Date Closed, the calculation should use that field instead of today&apos;s date to calculate the &quot;Days Overdue&quot; field.</description>
        <inlineHelpText>This is a calculation of the number of business days a record has been or was open (i.e., Stage was not Closed) beyond the Due Date.</inlineHelpText>
        <label>Business Days Overdue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_in_Current_Location__c</fullName>
        <formula>TODAY()- Current_Location_Start_Date_New__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days in Current Location</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_in_process_Congressional__c</fullName>
        <formula>IF( Congressional__c  = TRUE,  Days_Open__c , 0)</formula>
        <label>Days in process (Congressional )</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_in_process_external__c</fullName>
        <formula>IF(( ISPICKVAL( Internal_External__c , &apos;External&apos;)), Days_Open__c , 0)</formula>
        <label>Days_in_process_external</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_in_process_internal__c</fullName>
        <formula>IF(( ISPICKVAL(  Internal_External__c  , &apos;Internal&apos;)),  Days_Open__c , 0)</formula>
        <label>Days in process internal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Directives_Clearance_Due_Date__c</fullName>
        <description>The Date all clearances are due.</description>
        <inlineHelpText>The Date all clearances are due.</inlineHelpText>
        <label>Directives Clearance Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Directives_Coordination_Due_Date__c</fullName>
        <description>The Date all coordination clearances are due.</description>
        <inlineHelpText>The Date all coordination clearances are due.</inlineHelpText>
        <label>Directives Coordination Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <description>The due date for the final signer.</description>
        <inlineHelpText>The due date for the final signer.</inlineHelpText>
        <label>Requested Due Date - Signer</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Due_Date_for_Signature__c</fullName>
        <inlineHelpText>The Due Date for Signature field is used to indicate the date by which the final signature for this document should be obtained.</inlineHelpText>
        <label>Due Date for Signature</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Exception__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When checked, this field indicates that this record qualifies for an exception and should not be factored into the reports regarding record processing timeliness.</inlineHelpText>
        <label>Exception</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ExecSec_Days_Overdue__c</fullName>
        <description>The number of business days that have passed beyond the ExecSec Due Date. If the ExecSec End Date is populated, this field represents the number of business days that passed between the ExecSec Due Date and the ExecSec End Date.</description>
        <inlineHelpText>The number of business days that have passed beyond the ExecSec Due Date. If the ExecSec End Date is populated, this field represents the number of business days that passed between the ExecSec Due Date and the ExecSec End Date.</inlineHelpText>
        <label>ExecSec Days Overdue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ExecSec_Due_Date__c</fullName>
        <inlineHelpText>The date by when ExecSec should complete their work on the record. This is generally the day it is sent for signature.</inlineHelpText>
        <label>ExecSec Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ExecSec_End_Date__c</fullName>
        <inlineHelpText>The date ExecSec completed their work on this record.</inlineHelpText>
        <label>ExecSec End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ExecSec_Filters__c</fullName>
        <label>ExecSec Filters</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Administrator Due (any reason)</fullName>
                </value>
                <value>
                    <fullName>Agency-wide Clearance - PBS</fullName>
                </value>
                <value>
                    <fullName>Data Pull</fullName>
                </value>
                <value>
                    <fullName>Directive</fullName>
                </value>
                <value>
                    <fullName>Directive - Counted</fullName>
                </value>
                <value>
                    <fullName>Directives - Org change</fullName>
                </value>
                <value>
                    <fullName>Exemption</fullName>
                </value>
                <value>
                    <fullName>FAS handling</fullName>
                </value>
                <value>
                    <fullName>Furlough</fullName>
                </value>
                <value>
                    <fullName>FYI</fullName>
                </value>
                <value>
                    <fullName>Monitor</fullName>
                </value>
                <value>
                    <fullName>No response necessary (NRN)</fullName>
                </value>
                <value>
                    <fullName>Not Counted</fullName>
                </value>
                <value>
                    <fullName>OAS handling</fullName>
                </value>
                <value>
                    <fullName>OCIA handling</fullName>
                </value>
                <value>
                    <fullName>OIG HL Referral</fullName>
                </value>
                <value>
                    <fullName>PBS handling</fullName>
                </value>
                <value>
                    <fullName>Personnel</fullName>
                </value>
                <value>
                    <fullName>Referred to other agency</fullName>
                </value>
                <value>
                    <fullName>Service Letter</fullName>
                </value>
                <value>
                    <fullName>Transition</fullName>
                </value>
                <value>
                    <fullName>White House</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ExecSec_Start_Date__c</fullName>
        <inlineHelpText>This shows the date that ExecSec begins working on a Controlled Document record, but can be changed by ExecSec users.</inlineHelpText>
        <label>ExecSec Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ExecStart_To_ReqDueDate__c</fullName>
        <label>Time to Due Date</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Exec_Sec_On_Time_Count__c</fullName>
        <description>Total number of controls that have a “ExecSec Business Days Open” &lt;25 AND “GSA Action Required” = “Signature/Approval of the Administrator” AND (“ExecSec End Date” AND “ExecSec Start Date) are within the desired month.</description>
        <formula>IF ((Days_Open__c &lt; 25 )  &amp;&amp; ( MONTH( ExecSec_Start_Date__c )  = MONTH( ExecSec_End_Date__c ) ), &apos;Exec Sec On Time Count&apos;, &apos;Overdue&apos; )</formula>
        <label>(Exec Sec) On Time Count</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Exec_Sec_On_Time_test__c</fullName>
        <formula>IF ((Days_Open__c &lt; 25 )  &amp;&amp; ( MONTH( ExecSec_Start_Date__c )  = MONTH( ExecSec_End_Date__c ) ), 1, 0 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>(Exec Sec) On Time Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Exec_sec_has_25_Days_to_process_A_Suite__c</fullName>
        <formula>IF(( Full_25day_Process__c = TRUE  &amp;&amp;  GSA_AR_Signature_Approval_of_the_Admin__c = 1), 1, 0)</formula>
        <label>Exec sec has 25 Days to process A-Suite</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Expedite_Record2__c</fullName>
        <inlineHelpText>Please indicate the clearance timeline: Standard (25 days), Extended (25+ days), or Urgent (less than 25 days). For Urgent handling, an external deadline or justification for internal need must be provided in the &quot;If Due Date Missed&quot; field.</inlineHelpText>
        <label>Clearance Handling</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Standard</fullName>
                </value>
                <value>
                    <fullName>Extended</fullName>
                </value>
                <value>
                    <fullName>Urgent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Expedite_Record__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Please select this option if the Controlled Document is being approved faster than a typical record. If this option is selected, the &quot;Instructions for Expediting&quot; field must also be completed.</inlineHelpText>
        <label>Expedite Record</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Expedited__c</fullName>
        <formula>IF(ISPICKVAL(Expedite_Record2__c, &quot;Urgent&quot;), IMAGE(&quot;/resource/CDT_urgent_img&quot;, &quot;urgent&quot;),
IF(ISPICKVAL(Expedite_Record2__c, &quot;Extended&quot;), IMAGE(&quot;/resource/CDT_extended_img&quot;, &quot;extended&quot;),
IF(ISPICKVAL(Expedite_Record2__c, &quot;Standard&quot;),&quot;&quot;,&quot;&quot;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Handling</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Hard_Due_Date__c</fullName>
        <label>External Hard Due Date</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Y</fullName>
                </value>
                <value>
                    <fullName>N</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <description>This field is used to store the external ID from the legacy IQ system during the IQ to Force.com migration effort.</description>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Percent_Controls_Full_5_Days__c</fullName>
        <formula>IF(( Full_5day_Review__c = TRUE  &amp;&amp;  Total_External1__c = 1), 1, 0)</formula>
        <label>(External) Percent Controls(Full 5 Days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>External_w_less_Full_5day_A_Suite_review__c</fullName>
        <formula>IF(( (Full_5day_Review__c &lt;&gt; TRUE)  &amp;&amp;  GSA_AR_Signature_Approval_of_the_Admin__c =1  &amp;&amp;  Total_External1__c =1), 1, 0)</formula>
        <label>External w less Full 5day A-Suite review</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>